--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,8 @@
-.webgl-content * {border: 0; margin: 0; padding: 0} 
+.webgl-content * {border: 0; margin: 0; padding: 0;} 
+.webgl-content
+{
+    margin-top: 50px;
+}
 .webgl-content {position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 
 .webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
@@ -202,4 +206,20 @@ input:focus-within, textarea:focus-within
 .contact textarea
 {
     width: 500px;
+}
+
+.Credits
+{
+    margin-top: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:25px;
+
+}
+
+.CreditsBlock
+{
+
 }
