Finished How to Play Section, Plus fixed some bugs with the game input

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -208,7 +208,7 @@ input:focus-within, textarea:focus-within
     width: 500px;
 }
 
-.Credits, .Controls
+.Credits, .Controls, .HowTo
 {
     margin-top: 35px;
     display: flex;
