--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,7 +1,7 @@
 .webgl-content * {border: 0; margin: 0; padding: 0;} 
 .webgl-content
 {
-    margin-top: 50px;
+    margin-top: 7%;
 }
 .webgl-content {position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 
