--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -219,3 +219,19 @@ input:focus-within, textarea:focus-within
 
 }
 
+.discord img
+{
+    height: 100px;
+    width: 100px;
+}
+
+.discord
+{
+    margin-top: 3%;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
